# HorizonCore

./: .gitignore  CMakeLists.txt  README.md
cpp/: CMakeLists.txt
cpp/Platform/standard/: main.cpp
cpp/Platform/windows/implement/: HorizonLog_windows.cpp
cpp/Private/: HorizonCore.cpp  HorizonLog.cpp  Timer.cpp
cpp/Private/test/: test.cpp
cpp/Public/: HorizonCore.h  HorizonLog.h  StateMachineContext.h
cpp/precompile/: precompiled.cpp
proj.win32/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  HorizonCore.sln  HorizonCore.vcxproj  HorizonCore.vcxproj.filters  HorizonCoreStatic.vcxproj  HorizonCoreStatic.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
shell/: generateWin32.sh
